erDiagram
    TENANT ||--o{ USER : has
    TENANT ||--o{ CUSTOMER : has
    TENANT ||--o{ CAR : has
    CUSTOMER ||--o{ CAR : owns
    TENANT {
        int id PK
        string name
        string status
    }
    USER {
        int id PK
        int tenant_id FK
        string username
        string email
        string password_hash
        string role
    }
    CUSTOMER {
        int id PK
        int tenant_id FK
        string name
        string email
        string phone
    }
    CAR {
        int id PK
        int tenant_id FK
        int customer_id FK
        string make
        string model
        string year
        string vin
    }
